--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  /* 1rem = --bkd-font-size-base */
+  font-size: var(--bkd-font-size-base);
+}
+
 body {
   margin: 0;
   min-height: 100vh;
