--- a/public/styles/noteneingabe-override.css
+++ b/public/styles/noteneingabe-override.css
@@ -170,3 +170,36 @@ button.active circle[fill="#666"] {
 .dialogDraggable {
   border: solid 1px #c8c8c8;
 }
+
+#overlay-toggle-embedded {
+  float: right;
+  margin-right: 0;
+}
+
+#overlay-toggle-embedded-test > a {
+  display: inline-block;
+}
+
+.excelDropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.excelDropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  min-width: 120px;
+  box-shadow: none;
+  padding: 10px 10px;
+  color: var(--bs-btn-color);
+  border: 1px solid #ced4da;
+  border-radius: 0.375rem;
+  top: 34px;
+  text-align: left;
+}
+
+.excelDropdown:hover .excelDropdown-content,
+.excelDropdown:focus .excelDropdown-content {
+  display: grid;
+}
