fix iframe on reservation dialog

--- a/public/styles/raumreservation-override.css
+++ b/public/styles/raumreservation-override.css
@@ -134,6 +134,10 @@ button.navbar-toggler {
   display: initial;
 }
 
+.modal-open {
+  min-height: 740px;
+}
+
 .accordion {
   padding-bottom: 50px;
 }
