fix #overlay-toggle-embedded on mediascreen

--- a/public/apps/MasterExcel/main.css
+++ b/public/apps/MasterExcel/main.css
@@ -42,7 +42,7 @@
 }
 
 @media only screen and (max-width: 700px)  {
-    #overlay-toggle-embedded-test {
+    #overlay-toggle-embedded-test, #overlay-toggle-embedded {
         display: none;
     }
 }
