--- a/public/apps/EmberApps/Fotoliste/App/HtmlTemplates/Components/photoListComponent.html
+++ b/public/apps/EmberApps/Fotoliste/App/HtmlTemplates/Components/photoListComponent.html
@@ -6,6 +6,7 @@
 </div>
 {{else}}
 <h1 class="photolist__header photolist__top">{{event.designation}}</h1>
+<p>{{event.dateString}}</p>
 
 <div class="photolist-email-document">
     <div class="photolist-emailTo document">
