Reformat source code with Prettier 3.0.3

--- a/public/styles/noteneingabe-override.css
+++ b/public/styles/noteneingabe-override.css
@@ -118,8 +118,11 @@ pre {
   height: 35px !important;
   cursor: pointer;
   border-radius: 0.375rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition:
+    color 0.15s ease-in-out,
+    background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
 }
 
 #CLX_Root .option-button.active {
