--- a/public/apps/EmberApps/PersonPhoto/main.css
+++ b/public/apps/EmberApps/PersonPhoto/main.css
@@ -1,4 +1,3 @@
-
  .photo-container {
     position: fixed;
     top: 0;
@@ -6,6 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 9999;
+    overflow-y: auto;
   }
   
   .photo-background {
