--- a/public/styles/kursausschreibung-override.css
+++ b/public/styles/kursausschreibung-override.css
@@ -171,6 +171,12 @@ a.uk-icon-link.uk-hidden\@m.uk-icon {
   background-color: var(--bkd-brand-red);
   color: #fff;
   border-radius: 1rem;
+  text-decoration: none;
+}
+
+.uk-subnav-pill > li > a {
+  border-radius: 1rem;
+  text-decoration: none;
 }
 
 .centerHorizontalTop20Percent {
