Fix breadcrumb kursausschreibung font-size

--- a/public/styles/kursausschreibung-override.css
+++ b/public/styles/kursausschreibung-override.css
@@ -64,6 +64,11 @@ html,
   color: inherit !important;
 }
 
+.uk-breadcrumb > * > * 
+{
+  font-size: 0.875rem !important;
+}
+
 .uk-scope a {
   font-weight: inherit !important;
 }
