--- a/public/styles/kursausschreibung-override.css
+++ b/public/styles/kursausschreibung-override.css
@@ -64,8 +64,7 @@ html,
   color: inherit !important;
 }
 
-.uk-breadcrumb > * > * 
-{
+.uk-breadcrumb > * > * {
   font-size: 0.875rem !important;
 }
 
